--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -30,6 +30,6 @@ jobs:
         uses: "pascalgn/automerge-action@master"
         if: steps.waitforstatuschecks.outputs.status == 'success'
         env:
-          GITHUB_TOKEN: "${{ secrets.AUTH_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: automerge
           MERGE_FORKS: false
